imported forest fires data and checked for missing values

--- a/forest_fires.ipynb
+++ b/forest_fires.ipynb
@@ -2,33 +2,119 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:File `'./base..py'` not found.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'boxplots' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m~/Documents/Workspace/ML_Ex2/base.ipynb\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data/student_performance_kaggle/StudentPerformance.shuf.test.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mboxplots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'boxplots' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# imports \n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "%run './base.ipynb'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notes:\n",
+    "Data contains no missing values. Features 'month', 'day' are dtype object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 517 entries, 0 to 516\n",
+      "Data columns (total 13 columns):\n",
+      "X        517 non-null int64\n",
+      "Y        517 non-null int64\n",
+      "month    517 non-null object\n",
+      "day      517 non-null object\n",
+      "FFMC     517 non-null float64\n",
+      "DMC      517 non-null float64\n",
+      "DC       517 non-null float64\n",
+      "ISI      517 non-null float64\n",
+      "temp     517 non-null float64\n",
+      "RH       517 non-null int64\n",
+      "wind     517 non-null float64\n",
+      "rain     517 non-null float64\n",
+      "area     517 non-null float64\n",
+      "dtypes: float64(8), int64(3), object(2)\n",
+      "memory usage: 52.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import data \n",
+    "data = pd.read_csv('/Users/annanau/Documents/Workspace/ML_Ex2/data/forest_fires/forestfires.csv')\n",
+    "#display(data.isna().sum()) \n",
+    "#data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
