--- a/base.ipynb
+++ b/base.ipynb
@@ -14,7 +14,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Zeug\n",
     "## Preprocessing\n",
     "- impute (various kinds)/dummy values/drop missing values\n",
     "- outlier removal?\n",
@@ -22,9 +21,9 @@
     "- feature selection (PCA, etc.)/none\n",
     "\n",
     "## Models\n",
-    "- Linear Regression\n",
-    "- SVR\n",
-    "- GradientBoostingRegressor\n",
+    "- Linear Regression (Anna)\n",
+    "- SVR (Moritz)\n",
+    "- GradientBoostingRegressor (David)\n",
     "\n",
     "## Params\n",
     "- cv=10\n",
@@ -54,9 +53,7 @@
     "    \n",
     "## Steps\n",
     "- Imports for all Datasets\n",
-    "- functions for all Regressors\n",
-    "    - Linear Regression (Anna)\n",
-    "    - "
+    "- functions for all Regressors"
    ]
   },
   {
