--- a/base.ipynb
+++ b/base.ipynb
@@ -58,13 +58,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modules\n",
+    "\n",
+    "# import modules\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import sklearn as sk\n",
+    "from sklearn import metrics\n",
+    "from sklearn import model_selection\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.decomposition import PCA\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# allows to output plots in the notebook\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocessing\n",
     "\n",
-    "# test"
+    "# scale data\n",
+    "def scale_data(train_data, test_data = pd.DataFrame):\n",
+    "  scaler = preprocessing.StandardScaler()\n",
+    "  \n",
+    "  # Fit on training set only.\n",
+    "  scaler.fit(train_data)\n",
+    "  \n",
+    "  # Apply transform to both the training set and the test set.\n",
+    "  train_data[train_data.columns] = pd.DataFrame(scaler.transform(train_data[train_data.columns]))\n",
+    "  if (test_data.empty):\n",
+    "    return (train_data)\n",
+    "  else:\n",
+    "    test_data[test_data.columns] = pd.DataFrame(scaler.transform(test_data[test_data.columns]))\n",
+    "    return (train_data, test_data)\n",
+    "\n",
+    "# replace empty strings with nan\n",
+    "def fillspace_nan(data):\n",
+    "  return data.apply(lambda x: x.replace('', np.nan))\n",
+    "\n",
+    "# strip whitespaces\n",
+    "def strip(data):\n",
+    "  return data.apply(lambda x: x.str.strip())\n",
+    "\n",
+    "# one hot encoding\n",
+    "def one_hot(data, drop_first = True):\n",
+    "  columns = data.select_dtypes(['object'])\n",
+    "  return pd.get_dummies(data, columns = columns, drop_first = True)\n",
+    "\n",
+    "# PCA\n",
+    "def pca(train_data, test_data, n_comp):\n",
+    "  pca = PCA(n_components = n_comp)\n",
+    "  pca.fit(train_data)\n",
+    "  pca_train = pd.DataFrame(pca.transform(train_data))\n",
+    "  pca_test = pd.DataFrame(pca.transform(test_data))\n",
+    "  return (pca_train, pca_test)"
    ]
   },
   {
