addedd gradient boosted regressor method (run_boosted_tree) in base.ipynb; added initial data load and first tests for blog feedback

--- a/base.ipynb
+++ b/base.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,11 +68,15 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sklearn as sk\n",
+    "import time\n",
     "from sklearn import metrics\n",
     "from sklearn import model_selection\n",
     "from sklearn import preprocessing\n",
     "from sklearn.decomposition import PCA\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
     "\n",
     "# allows to output plots in the notebook\n",
     "%matplotlib inline"
@@ -147,7 +151,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gradient Boosting\n"
+    "# Gradient Boosting\n",
+    "\n",
+    "def run_boosted_tree(train_data, train_target, test_data, test_target, param_fix, cv, param_grid):\n",
+    "    print(\"GridSearch initializing...\")\n",
+    "    clf = GridSearchCV(estimator = GradientBoostingRegressor(**param_fix), cv = cv, param_grid = param_grid)\n",
+    "    \n",
+    "    print(\"GradientBoostedRegressor model in training...\")\n",
+    "    t0 = time.time()\n",
+    "    clf.fit(train_data, train_target)\n",
+    "    clf_fit = time.time() - t0\n",
+    "    print(\"GradientBoostedRegressor model selected and fitted in %.3f s\\n\" % clf_fit)\n",
+    "    \n",
+    "    best_params = clf.best_params_\n",
+    "    print(best_params)\n",
+    "    \n",
+    "def run_boosted_tree_simple(train_data, train_target, test_data, test_target, param_fix):\n",
+    "    print(\"GridSearch initializing...\")\n",
+    "    clf = GradientBoostingRegressor(**param_fix)\n",
+    "    \n",
+    "    print(\"GradientBoostedRegressor model in training...\")\n",
+    "    t0 = time.time()\n",
+    "    clf.fit(train_data, train_target)\n",
+    "    clf_fit = time.time() - t0\n",
+    "    print(\"GradientBoostedRegressor model selected and fitted in %.3f s\\n\" % clf_fit)"
    ]
   }
  ],
