Blog Feedback: preprocessing steps, finalized GradientBoostedRegressor

--- a/base.ipynb
+++ b/base.ipynb
@@ -70,6 +70,7 @@
     "import sklearn as sk\n",
     "import time\n",
     "from sklearn import metrics\n",
+    "from sklearn.metrics import make_scorer\n",
     "from sklearn import model_selection\n",
     "from sklearn import preprocessing\n",
     "from sklearn.decomposition import PCA\n",
@@ -155,7 +156,9 @@
     "\n",
     "def run_boosted_tree(train_data, train_target, test_data, test_target, param_fix, cv, param_grid):\n",
     "    print(\"GridSearch initializing...\")\n",
-    "    clf = GridSearchCV(estimator = GradientBoostingRegressor(**param_fix), cv = cv, param_grid = param_grid)\n",
+    "    clf = GridSearchCV(estimator = GradientBoostingRegressor(**param_fix), cv = cv, param_grid = param_grid, \n",
+    "                       scoring = ['r2', 'neg_mean_absolute_error', 'neg_mean_squared_error'], \n",
+    "                       refit = 'neg_mean_squared_error')\n",
     "    \n",
     "    print(\"GradientBoostedRegressor model in training...\")\n",
     "    t0 = time.time()\n",
@@ -164,17 +167,71 @@
     "    print(\"GradientBoostedRegressor model selected and fitted in %.3f s\\n\" % clf_fit)\n",
     "    \n",
     "    best_params = clf.best_params_\n",
-    "    print(best_params)\n",
+    "    print(\"Best parameters selected by GridSearch: %s\" % best_params)\n",
     "    \n",
-    "def run_boosted_tree_simple(train_data, train_target, test_data, test_target, param_fix):\n",
-    "    print(\"GridSearch initializing...\")\n",
-    "    clf = GradientBoostingRegressor(**param_fix)\n",
+    "    return clf\n",
+    "\n",
+    "# does not work with GridSearch!!!\n",
+    "def plot_training_deviance(clf, X_test, y_test):\n",
+    "    test_score = np.zeros((clf.best_params_['n_estimators'],), dtype=np.float64)\n",
+    "\n",
+    "    for i, y_pred in enumerate(clf.staged_predict(X_test)):\n",
+    "        test_score[i] = clf.loss_(y_test, y_pred)\n",
+    "\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.title('Deviance')\n",
+    "    plt.plot(np.arange(params['n_estimators']) + 1, clf.train_score_, 'b-',\n",
+    "             label='Training Set Deviance')\n",
+    "    plt.plot(np.arange(params['n_estimators']) + 1, test_score, 'r-',\n",
+    "             label='Test Set Deviance')\n",
+    "    plt.legend(loc='upper right')\n",
+    "    plt.xlabel('Boosting Iterations')\n",
+    "    plt.ylabel('Deviance')\n",
+    "\n",
+    "# kinda not works as expected\n",
+    "def plot_scores(results):\n",
+    "    scoring = ['r2', 'neg_mean_squared_error']\n",
     "    \n",
-    "    print(\"GradientBoostedRegressor model in training...\")\n",
-    "    t0 = time.time()\n",
-    "    clf.fit(train_data, train_target)\n",
-    "    clf_fit = time.time() - t0\n",
-    "    print(\"GradientBoostedRegressor model selected and fitted in %.3f s\\n\" % clf_fit)"
+    "    plt.figure(figsize=(13, 13))\n",
+    "    plt.title(\"GridSearchCV evaluating using multiple scorers simultaneously\",\n",
+    "          fontsize=16)\n",
+    "\n",
+    "    plt.xlabel(\"n_estimators\")\n",
+    "    plt.ylabel(\"Score\")\n",
+    "\n",
+    "    ax = plt.gca()\n",
+    "    ax.set_xlim(0, 402)\n",
+    "    ax.set_ylim(0, 1)\n",
+    "\n",
+    "    # Get the regular numpy array from the MaskedArray\n",
+    "    X_axis = np.array(results['param_n_estimators'].data, dtype=float)\n",
+    "\n",
+    "    for scorer, color in zip(sorted(scoring), ['g', 'k']):\n",
+    "        for sample, style in (('train', '--'), ('test', '-')):\n",
+    "            sample_score_mean = results['mean_%s_%s' % (sample, scorer)]\n",
+    "            sample_score_std = results['std_%s_%s' % (sample, scorer)]\n",
+    "            ax.fill_between(X_axis, sample_score_mean - sample_score_std,\n",
+    "                            sample_score_mean + sample_score_std,\n",
+    "                            alpha=0.1 if sample == 'test' else 0, color=color)\n",
+    "            ax.plot(X_axis, sample_score_mean, style, color=color,\n",
+    "                    alpha=1 if sample == 'test' else 0.7,\n",
+    "                    label=\"%s (%s)\" % (scorer, sample))\n",
+    "\n",
+    "        best_index = np.nonzero(results['rank_test_%s' % scorer] == 1)[0][0]\n",
+    "        best_score = results['mean_test_%s' % scorer][best_index]\n",
+    "\n",
+    "        # Plot a dotted vertical line at the best score for that scorer marked by x\n",
+    "        ax.plot([X_axis[best_index], ] * 2, [0, best_score],\n",
+    "                linestyle='-.', color=color, marker='x', markeredgewidth=3, ms=8)\n",
+    "\n",
+    "        # Annotate the best score for that scorer\n",
+    "        ax.annotate(\"%0.2f\" % best_score,\n",
+    "                    (X_axis[best_index], best_score + 0.005))\n",
+    "\n",
+    "    plt.legend(loc=\"best\")\n",
+    "    plt.grid('off')\n",
+    "    plt.show()"
    ]
   }
  ],
