AutoML method added in base.ipynb

--- a/base.ipynb
+++ b/base.ipynb
@@ -60,7 +60,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARN: OMP_NUM_THREADS=None =>\n",
+      "... If you are using openblas if you are using openblas set OMP_NUM_THREADS=1 or risk subprocess calls hanging indefinitely\n"
+     ]
+    }
+   ],
    "source": [
     "# Modules\n",
     "\n",
@@ -78,6 +87,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from hpsklearn import HyperoptEstimator\n",
+    "from hyperopt import hp\n",
     "\n",
     "# allows to output plots in the notebook\n",
     "%matplotlib inline"
@@ -171,7 +182,7 @@
     "    \n",
     "    return clf\n",
     "\n",
-    "# does not work with GridSearch!!!\n",
+    "# does not work with GridSearch\n",
     "def plot_training_deviance(clf, X_test, y_test):\n",
     "    test_score = np.zeros((clf.best_params_['n_estimators'],), dtype=np.float64)\n",
     "\n",
@@ -233,6 +244,46 @@
     "    plt.grid('off')\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AutoML\n",
+    "\n",
+    "def run_autoML(train_data, train_target, test_data, test_target, preprocessing_, classifier_):\n",
+    "    # define an algorithm that searches randomly 5% of the time,\n",
+    "    # uses TPE 75% of the time, and uses annealing 20% of the time\n",
+    "    mix_algo = partial(mix.suggest, p_suggest=[\n",
+    "        (0.05, rand.suggest),\n",
+    "        (0.75, tpe.suggest),\n",
+    "        (0.20, anneal.suggest)])\n",
+    "    \n",
+    "    print(\"AutoML estimator initializing...\")\n",
+    "    estim = HyperoptEstimator(\n",
+    "        classifier=classifier_,\n",
+    "        preprocessing=preprocessing_,\n",
+    "        algo=mix_algo,\n",
+    "        trial_timeout=300)\n",
+    "    \n",
+    "    print(\"AutoML estimator in training...\")\n",
+    "    t0 = time.time()\n",
+    "    estim.fit(train_data, train_target, cv_shuffle = False)\n",
+    "    estim_fit = time.time() - t0\n",
+    "    print(\"Best classifier selected and fitted in %.3f s\\n\" % estim_fit)\n",
+    "    \n",
+    "    print(\"Scoring: \" + estim.score(test_data, test_target))\n",
+    "    print(\"Best selected model: \" + estim.best_model())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
