changes to AutoML method

--- a/base.ipynb
+++ b/base.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -86,9 +86,13 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "# Gradient Boosted Tree\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "from hpsklearn import HyperoptEstimator\n",
+    "\n",
+    "# AutoML\n",
+    "from hpsklearn import HyperoptEstimator, svr_linear, gradient_boosting_regression, pca, normalizer, standard_scaler\n",
     "from hyperopt import hp\n",
+    "from hyperopt import anneal, rand, tpe, mix\n",
     "\n",
     "# allows to output plots in the notebook\n",
     "%matplotlib inline"
@@ -96,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +135,7 @@
     "  return pd.get_dummies(data, columns = columns, drop_first = True)\n",
     "\n",
     "# PCA\n",
-    "def pca(train_data, test_data, n_comp):\n",
+    "def my_pca(train_data, test_data, n_comp):\n",
     "  pca = PCA(n_components = n_comp)\n",
     "  pca.fit(train_data)\n",
     "  pca_train = pd.DataFrame(pca.transform(train_data))\n",
@@ -141,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,25 +251,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# AutoML\n",
     "\n",
-    "def run_autoML(train_data, train_target, test_data, test_target, preprocessing_, classifier_):\n",
-    "    # define an algorithm that searches randomly 5% of the time,\n",
-    "    # uses TPE 75% of the time, and uses annealing 20% of the time\n",
-    "    mix_algo = partial(mix.suggest, p_suggest=[\n",
-    "        (0.05, rand.suggest),\n",
-    "        (0.75, tpe.suggest),\n",
-    "        (0.20, anneal.suggest)])\n",
+    "def run_autoML(train_data, train_target, test_data, test_target, preprocessing_ = {None}, classifier_ = {None}):\n",
+    "    # define set of classifier\n",
+    "    if classifier_ == {None}:\n",
+    "        #classifier_ = hp.choice('clf',[GradientBoostingRegressor(learning_rate = 0.01, loss = 'ls')])\n",
+    "        classifier_ = hp.choice('clf',[\n",
+    "            svr_linear('svr', max_iter=1e5),\n",
+    "            gradient_boosting_regression('gbt', learning_rate = 0.01, loss = 'ls')])\n",
+    "    else:\n",
+    "        classifier_ = classifier_\n",
+    "        \n",
+    "    # define preprocessing options\n",
+    "    if preprocessing_ == {None}:\n",
+    "        preprocessing_ = hp.choice('preproc',\n",
+    "            [pca('pca'), normalizer('norm'),\n",
+    "            standard_scaler('stand')])\n",
+    "    else:\n",
+    "        preprocessing_ = preprocessing_\n",
     "    \n",
     "    print(\"AutoML estimator initializing...\")\n",
     "    estim = HyperoptEstimator(\n",
-    "        classifier=classifier_,\n",
+    "        regressor=classifier_,\n",
     "        preprocessing=preprocessing_,\n",
-    "        algo=mix_algo,\n",
+    "        algo=tpe.suggest,\n",
+    "        max_evals = 30,\n",
     "        trial_timeout=300)\n",
     "    \n",
     "    print(\"AutoML estimator in training...\")\n",
