--- a/base.ipynb
+++ b/base.ipynb
@@ -60,7 +60,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/annanau/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "# Modules\n",
     "\n",
@@ -76,7 +85,9 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from datetime import datetime\n",
+    "from time import strptime\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "\n",
     "# allows to output plots in the notebook\n",
@@ -130,11 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Linear Regression\n"
+    "# Linear Regression\n",
+    "def linear_reg(X_train, y_train, X_test, y_test, get_coef = True):\n",
+    "    # Build model\n",
+    "    reg = LinearRegression().fit(X_train, y_train)\n",
+    "    r2_score = reg.score(X_train, y_train)\n",
+    "    \n",
+    "    # Predict test data and compute MSE\n",
+    "    y_pred = reg.predict(X_test)\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    \n",
+    "    metrics = {'R2 Score: ': [r2_score], 'MSE: ' : mse}\n",
+    "    \n",
+    "    coef = {}\n",
+    "    if get_coef:\n",
+    "        coef = {\n",
+    "            'Coefficients: ' :reg.coef_\n",
+    "        }\n",
+    "    return metrics, coef"
    ]
   },
   {
@@ -251,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
