Added SVR (not working yet)

--- a/base.ipynb
+++ b/base.ipynb
@@ -58,21 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'hpsklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-ffec2acb1100>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;31m# AutoML\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mhpsklearn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mhpsklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mHyperoptEstimator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msvr_linear\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient_boosting_regression\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpca\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnormalizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstandard_scaler\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mhyperopt\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mhp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'hpsklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Modules\n",
     "\n",
@@ -91,6 +79,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from datetime import datetime\n",
     "from time import strptime\n",
+    "\n",
+    "# SVR\n",
+    "from sklearn.svm import SVR\n",
     "\n",
     "# Gradient Boosted Tree\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
@@ -178,11 +169,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SVR\n"
+    "# Support Vector Regression \n",
+    "def run_svr(X_train, y_train):\n",
+    "    \"\"\"Run SVR\n",
+    "    \n",
+    "    Keyword arguments:\n",
+    "    X_train -- train data\n",
+    "    y_train -- train target\n",
+    "    \"\"\"\n",
+    "    svr = SVR()\n",
+    "\n",
+    "    params = {\n",
+    "        'C': np.linspace(.2,1,5),\n",
+    "        'kernel': ['linear', 'rbf', 'sigmoid', 'poly'], # poly very slow\n",
+    "        'epsilon': np.linspace(0,.5,6)\n",
+    "    }\n",
+    "    \n",
+    "    print(\"GridSearch initializing...\")\n",
+    "    gs = GridSearchCV(svr, param_grid=params, cv=10, scoring=['r2', 'neg_mean_absolute_error', 'neg_mean_squared_error'], refit='r2')\n",
+    "    \n",
+    "    print(\"SVR model in training...\")\n",
+    "    gs.fit(X_train, y_train)\n",
+    "\n",
+    "    print(f'''Score: {gs.best_score_}, ''' \\\n",
+    "          f'''C: {gs.best_estimator_.C}, ''' \\\n",
+    "          f'''kernel: {gs.best_estimator_.kernel}, ''' \\\n",
+    "          f'''epsilon: {gs.best_estimator_.epsilon}''')\n",
+    "    \n",
+    "    return gs"
    ]
   },
   {
@@ -341,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
