--- a/base.ipynb
+++ b/base.ipynb
@@ -147,24 +147,12 @@
    "outputs": [],
    "source": [
     "# Linear Regression\n",
-    "def linear_reg(X_train, y_train, X_test, y_test, get_coef = True):\n",
-    "    # Build model\n",
+    "def linear_reg(X_train, y_train):\n",
     "    reg = LinearRegression().fit(X_train, y_train)\n",
-    "    r2_score = reg.score(X_train, y_train)\n",
     "    \n",
-    "    coef = {}\n",
-    "    if get_coef:\n",
-    "        coef = {\n",
-    "            'Coefficients: ' :reg.coef_\n",
-    "        }\n",
-    "    \n",
-    "    # Predict test data and compute MSE\n",
-    "    y_pred = reg.predict(X_test)\n",
-    "    mse = mean_squared_error(y_test, y_pred)\n",
-    "    \n",
-    "    metrics = {'R2 Score: ': [r2_score], 'MSE: ' : mse}\n",
-    "    \n",
-    "    return reg, coef, metrics"
+    "    print(f'R^2 value for model: {reg.score(X_train, y_train)}')\n",
+    "\n",
+    "    return reg"
    ]
   },
   {
@@ -359,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
