added results, worked on SVR, added excludes to scale_data,

--- a/base.ipynb
+++ b/base.ipynb
@@ -33,6 +33,7 @@
     "## AutoML\n",
     "- \n",
     "\n",
+    "\n",
     "## Datasets\n",
     "- Bike sharing (Kaggle) ()\n",
     "    - https://www.kaggle.com/c/184702-tu-ml-ws-18-bike-sharing#_=_\n",
@@ -53,7 +54,19 @@
     "    \n",
     "## Steps\n",
     "- Imports for all Datasets\n",
-    "- functions for all Regressors"
+    "- functions for all Regressors\n",
+    "\n",
+    "## Notes\n",
+    "On MSE being negative:\n",
+    "\n",
+    "```\n",
+    "Yes, this is supposed to happen. The actual MSE is simply the positive version of the number you're getting.\n",
+    "\n",
+    "The unified scoring API always maximizes the score, so scores which need to be minimized are negated in order for the unified scoring API to work correctly. The score that is returned is therefore negated when it is a score that should be minimized and left positive if it is a score that should be maximized.\n",
+    "```\n",
+    "from https://stackoverflow.com/questions/21443865/scikit-learn-cross-validation-negative-values-with-mean-squared-error, \n",
+    "\n",
+    "also described in https://stackoverflow.com/questions/21050110/sklearn-gridsearchcv-with-pipeline"
    ]
   },
   {
@@ -97,47 +110,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocessing\n",
     "\n",
     "# scale data\n",
-    "def scale_data(train_data, test_data = pd.DataFrame):\n",
-    "  scaler = preprocessing.StandardScaler()\n",
+    "def scale_data(train_data, test_data = pd.DataFrame, exclude_train=[], exclude_test=[]):\n",
+    "    \"\"\"Standardize features by removing the mean and scaling to unit variance\n",
+    "    \n",
+    "    Only scales columns with dtype 'float64' and 'int64'.\"\"\"\n",
+    "    \n",
+    "    scaler = preprocessing.StandardScaler()\n",
     "  \n",
-    "  # Fit on training set only.\n",
-    "  scaler.fit(train_data)\n",
-    "  \n",
-    "  # Apply transform to both the training set and the test set.\n",
-    "  train_data[train_data.columns] = pd.DataFrame(scaler.transform(train_data[train_data.columns]))\n",
-    "  if (test_data.empty):\n",
-    "    return (train_data)\n",
-    "  else:\n",
-    "    test_data[test_data.columns] = pd.DataFrame(scaler.transform(test_data[test_data.columns]))\n",
-    "    return (train_data, test_data)\n",
+    "    # drop excluded cols, select numeric cols from data and cast them to float64\n",
+    "    train = train_data.drop(exclude_train, axis='columns').select_dtypes(['float64', 'int64']).astype('float64')\n",
+    "    test = test_data.drop(exclude_test, axis='columns').select_dtypes(['float64', 'int64']).astype('float64')\n",
+    "                \n",
+    "    # Fit on training set only.\n",
+    "    scaler.fit(train)\n",
+    "\n",
+    "    # Apply transform to both the training set and the test set.    \n",
+    "    train[train.columns] = pd.DataFrame(scaler.transform(train[train.columns]))    \n",
+    "    train_data[train.columns] = train[train.columns]\n",
+    "    if (test.empty):\n",
+    "        return (train_data)\n",
+    "    else:\n",
+    "        test[test.columns] = pd.DataFrame(scaler.transform(test[test.columns]))\n",
+    "        test_data[test.columns] = test[test.columns]\n",
+    "        return (train_data, test_data)\n",
     "\n",
     "# replace empty strings with nan\n",
     "def fillspace_nan(data):\n",
-    "  return data.apply(lambda x: x.replace('', np.nan))\n",
+    "    return data.apply(lambda x: x.replace('', np.nan))\n",
     "\n",
     "# strip whitespaces\n",
     "def strip(data):\n",
-    "  return data.apply(lambda x: x.str.strip())\n",
+    "    return data.apply(lambda x: x.str.strip())\n",
     "\n",
     "# one hot encoding\n",
     "def one_hot(data, drop_first = True):\n",
-    "  columns = data.select_dtypes(['object'])\n",
-    "  return pd.get_dummies(data, columns = columns, drop_first = True)\n",
+    "    columns = data.select_dtypes(['object']).columns\n",
+    "    return pd.get_dummies(data, columns = columns, drop_first = True)\n",
     "\n",
     "# PCA\n",
     "def my_pca(train_data, test_data, n_comp):\n",
-    "  pca = PCA(n_components = n_comp)\n",
-    "  pca.fit(train_data)\n",
-    "  pca_train = pd.DataFrame(pca.transform(train_data))\n",
-    "  pca_test = pd.DataFrame(pca.transform(test_data))\n",
-    "  return (pca_train, pca_test)"
+    "    pca = PCA(n_components = n_comp)\n",
+    "    pca.fit(train_data)\n",
+    "    pca_train = pd.DataFrame(pca.transform(train_data))\n",
+    "    pca_test = pd.DataFrame(pca.transform(test_data))\n",
+    "    return (pca_train, pca_test)"
    ]
   },
   {
@@ -157,28 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Support Vector Regression \n",
-    "def run_svr(X_train, y_train):\n",
+    "def run_svr(X_train, y_train, cv, param_grid):\n",
     "    \"\"\"Run SVR\n",
     "    \n",
     "    Keyword arguments:\n",
     "    X_train -- train data\n",
     "    y_train -- train target\n",
     "    \"\"\"\n",
-    "    svr = SVR()\n",
-    "\n",
-    "    params = {\n",
-    "        'C': np.linspace(.2,1,5),\n",
-    "        'kernel': ['linear', 'rbf', 'sigmoid', 'poly'], # poly very slow\n",
-    "        'epsilon': np.linspace(0,.5,6)\n",
-    "    }\n",
     "    \n",
     "    print(\"GridSearch initializing...\")\n",
-    "    gs = GridSearchCV(svr, param_grid=params, cv=10, scoring=['r2', 'neg_mean_absolute_error', 'neg_mean_squared_error'], refit='r2')\n",
+    "    gs = GridSearchCV(estimator = SVR(), cv=cv, param_grid=param_grid,\n",
+    "                      scoring=['r2', 'neg_mean_absolute_error', 'neg_mean_squared_error'], \n",
+    "                      refit='neg_mean_squared_error')\n",
     "    \n",
     "    print(\"SVR model in training...\")\n",
     "    gs.fit(X_train, y_train)\n",
@@ -186,7 +204,8 @@
     "    print(f'''Score: {gs.best_score_}, ''' \\\n",
     "          f'''C: {gs.best_estimator_.C}, ''' \\\n",
     "          f'''kernel: {gs.best_estimator_.kernel}, ''' \\\n",
-    "          f'''epsilon: {gs.best_estimator_.epsilon}''')\n",
+    "          f'''epsilon: {gs.best_estimator_.epsilon}, ''' \\\n",
+    "          f'''gamma: {gs.best_estimator_.gamma} ''')\n",
     "    \n",
     "    return gs"
    ]
@@ -347,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
